--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "^4.1.13",
     "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.13",
+    "vue-json-pretty": "^2.5.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
