--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "tailwindcss": "^4.1.13",
     "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vite": "^7.0.6"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
