--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,26 +9,7 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
-    env:
-      NODE_VERSION: 20
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v1
         with:
-          fetch-depth: 0
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: pnpm
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Build site
-        run: pnpm build
+          node-version: 22.14.0
