--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 22.14.0
+      - name: install packages
+        run: npm install
