--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -24,9 +24,7 @@ jobs:
         with:
           name: production-files
           path: ./dist
-
-
-deploy:
+  deploy:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
