--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,30 +7,36 @@ on:
     branches: [ main ]
 
 permissions:
-    pages: write      # to deploy to Pages
-    id-token: write   # to verify the deployment originates from an appropriate source
-
+  pages: write
+  id-token: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: 22.14.0
-      - run: npm cache clean --force
-      - run: rm -rf node_modules package-lock.json
-      - run: npm install -g npm@latest
-      - run: npm install
-      - run: npm run build
+          node-version: '22.x'
+
+      - name: Install dependencies
+        # Prefer deterministic install; fall back to npm install if no lockfile
+        run: npm ci || npm install
+
+      - name: Build
+        run: npm run build
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist repository
           path: './dist'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
